--- a/README.rdoc
+++ b/README.rdoc
@@ -30,7 +30,7 @@ Just start the shell and play around, to get a fresh feeling. For an example ses
 
 The main regexp to determine if the command should be interpreted as system command is similar to this one: <tt>/^[a-z_-]+\s+.*/i</tt> (match a single word followed by at least one space). It can be adjusted in <tt>Ripl.config[:fresh_match_regexp]</tt>. See below for details.
 
-TODO [0.1.3]
+TODO [0.2.0]
 
 To use the command output, you can redirect it to a Ruby variable (or similar Ruby expression) like this:
 
@@ -53,6 +53,7 @@ There is <tt>Riplc.config[:fresh_prompt]</tt> option, which takes a wide range o
 
 === Command mode determination
 
+=begin rewrite for 0.2.0
 If this regexp matches or the input is a single word <tt>([a-z_-]+)</tt>, _fresh_ searches through the <tt>Ripl.config[:fresh_ruby_words]</tt> array for exceptions that still should get interpreted as Ruby (e.g. <tt>def </tt>).
 
 Then, the <tt>Ripl.config[:fresh_system_words]</tt> arrays is checked, if it contains the command. This array defaults to your <tt>ENV['PATH']</tt>. You can add your own system commands there.
@@ -66,27 +67,11 @@ If the regexp does match, but the command could not be found in any of the three
 Of course, there is a way to explicitly set your command mode: You can prefix your input with a space to force Ruby mode as well as you can prefix it with <tt>^</tt> to force system mode. The strings used for this can be customized in <tt>Ripl.config[:fresh_system_prefix]</tt> and <tt>Ripl.config[:fresh_ruby_prefix]</tt>.
 
 You need to take a look at <tt>get_input</tt> method in the source file to 100% understand the command mode detection way.
+=end
 
 === Defaults
 
-  # prefixes
-  Ripl.config[:fresh_system_prefix]  = %w[^]
-  Ripl.config[:fresh_ruby_prefix]    = [' ']
-  # word arrays
-  Ripl.config[:fresh_ruby_words]     = %w[begin case class def for if module undef unless until while puts warn print p pp ap raise fail loop require load lambda proc system]
-  Ripl.config[:fresh_system_words]   =
-    ENV['PATH'].split(File::PATH_SEPARATOR).uniq.map {|e|
-      File.directory?(e) ? Dir.entries(e) : []
-    }.flatten.uniq - ['.', '..'] 
-  Ripl.config[:fresh_mixed_words]    = %w[cd] 
-  # main regexp
-  Ripl.config[:fresh_match_regexp]    = /^([a-z\/_-]+)\s+(?!(?:[=%*]|!=|\+=|-=|\/=))/i
-  # regex matched but word not in one of the three arrays, possible values: :ruby, :system, :mixed
-  Ripl.config[:fresh_match_default]   = :ruby
-  # regex did not match
-  Ripl.config[:fresh_default]         = :ruby
-  # configure prompt
-  Ripl.config[:fresh_prompt] = :default
+TODO: add
 
 == Customization
 
@@ -115,8 +100,8 @@ Feel free to fork in your improvements ;)
 
 * {rush}[https://github.com/adamwiggins/rush] - Another Ruby shell, different concept
 * {ripl}[https://github.com/cldwalker/ripl] - An irb alternative, +fresh+ is based on it
-* {rubsh}[123] - Some similar ideas
-* {ulch}[123]
+* {rubsh}[http://rubygems.org/gems/rubsh] - Some similar ideas
+* {urchin}[https://github.com/Spakman/urchin] - More unix like approach
 
 == Copyright
 
