be compatible with latest ripls, don't use rocket, version 0.2.1

--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+== 0.2.1
+* Be compatible with latest ripls
+* Deactivate rocket prompt
+
 == 0.2.0
 * Better system command error handling
 * Refactored command mode detection, changed configuration settings
